--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
                 <div class="img-wrap">
                   <img src="img/icecream-orange.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">310 ₽/кг</p>
+                <p class="card-price">310₽<span>/кг</span></span>
+                </p>
                 <a class="card-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
               </div>
@@ -142,7 +143,8 @@
                 <div class="img-wrap">
                   <img src="img/icecream-coffee.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">380 ₽/кг</p>
+                <p class="card-price">380₽<span>/кг</span></span>
+                </p>
                 <a class="card-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
                 <div class="hover-product-wrap"><a class="button-preview">Быстрый просмотр</a>
                 </div>
@@ -151,7 +153,8 @@
                 <div class="img-wrap">
                   <img src="img/icecream-strawberry.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">355 ₽/кг</p>
+                <p class="card-price">355₽<span>/кг</span></span>
+                </p>
                 <a class="card-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 <div class="hover-product-wrap"><a class="button-preview">Быстрый просмотр</a>
                 </div>
@@ -160,7 +163,8 @@
                 <div class="img-wrap">
                   <img src="img/icecream-creme-brulee.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">415 ₽/кг</p>
+                <p class="card-price">415₽<span>/кг</span></span>
+                </p>
                 <a class="card-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 <div class="hover-product-wrap"><a class="button-preview">Быстрый просмотр</a>
                 </div>
@@ -173,14 +177,14 @@
             </p>
             <ul class="excellence">
               <li class="about-us-ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-              <li class="about-us-cows">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
-              <li class="about-us-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+              <li class="about-us-cows">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+              <li class="about-us-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>
               <li class="about-us-thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
             </ul>
           </section>
           <div class="blog-newsletter">
             <section class="blog">
-              <h3>Новое в нашем блоге</h3>
+              <div class="blog-header">Новое в нашем блоге</div>
               <a href="blog.html">10 способов сервировки фруктовых шербетов к столу </a>
             </section>
             <section class="newsletter">
@@ -201,7 +205,7 @@
               <p class="address-big">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
               <p class="address-small">Для заказов по телефону:</p>
               <p class="address-big">8 812 450-25-25</p>
-              <p class="address-small">(с 10 до 20 часов)</p>
+              <p class="address-small">(с 10 до 20 ежедневно)</p>
               <a class="open-feedback-form" href="form.html">Форма обратной связи</a>
             </div>
           </div>
@@ -227,8 +231,8 @@
           <div class="footer-info">
             <ul class="flex-container-footer-info">
               <li><a class="info-link heart" href="#">Для поставщиков</a></li>
-              <li><a class="info-link" href="#">О производстве</a></li>
               <li><a class="info-link" href="#">Наши документы</a></li>
+              <li><a class="info-link" href="#">О производстве</a></li>
               <li><a class="info-link" href="#">Экологические стандарты</a></li>
             </ul>
           </div>
