--- a/catalog.html
+++ b/catalog.html
@@ -235,84 +235,84 @@
         <div class="item-cards-table">
           <div class="icecream-card">
             <img src="img/icecream-orange.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">310₽<span>/кг</span></span>
+            <p class="card-price">310₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное c апельсиновым джемом и цитрусовой стружкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-coffee.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">380₽<span>/кг</span></span>
+            <p class="card-price">380₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочно-кофейное с кусочками шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-strawberry.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">355₽<span>/кг</span></span>
+            <p class="card-price">355₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочно-клубничное с присыпкой из белого шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-creme-brulee.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">415₽<span>/кг</span></span>
+            <p class="card-price">415₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное крем-брюле с карамельной подливкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-cowberry.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">325₽<span>/кг</span></span>
+            <p class="card-price">325₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное c брусничным джемом</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-blueberries.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">410₽<span>/кг</span></span>
+            <p class="card-price">410₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочно-черничное с цельным ягодами черники</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-lemon.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">375₽<span>/кг</span></span>
+            <p class="card-price">375₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочно-лимонное с карамельной присыпкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-chocolate-chips.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">320₽<span>/кг</span></span>
+            <p class="card-price">320₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное с шоколадной стружкой</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-vanilla.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">440₽<span>/кг</span></span>
+            <p class="card-price">440₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочно-ванильное с кусочками шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-menthol.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">435₽<span>/кг</span></span>
+            <p class="card-price">435₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное с ментоловым сиропом</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-piece-black-chocolate.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">355₽<span>/кг</span></span>
+            <p class="card-price">355₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное с кусочками черного шоколада</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
             <img src="img/icecream-mint.jpg" width="267" height="267" alt="фото мороженки">
-            <p class="card-price">420₽<span>/кг</span></span>
+            <p class="card-price">420₽<span>/кг</span>
             </p>
             <a class="card-name">Сливочное с мятным сиропом</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
@@ -350,8 +350,8 @@
       <div class="footer-info">
         <ul class="flex-container-footer-info">
           <li><a class="info-link heart" href="#">Для поставщиков</a></li>
-          <li><a class="info-link" href="#">О производстве</a></li>
           <li><a class="info-link" href="#">Наши документы</a></li>
+          <li><a class="info-link" href="#">О производстве</a></li>
           <li><a class="info-link" href="#">Экологические стандарты</a></li>
         </ul>
       </div>
