--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <div class="img-wrap">
                   <img src="img/icecream-orange.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">310₽<span>/кг</span></span>
+                <p class="card-price">310₽<span>/кг</span>
                 </p>
                 <a class="card-name" href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
                 <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
@@ -143,7 +143,7 @@
                 <div class="img-wrap">
                   <img src="img/icecream-coffee.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">380₽<span>/кг</span></span>
+                <p class="card-price">380₽<span>/кг</span>
                 </p>
                 <a class="card-name" href="#">Сливочно-кофейное с кусочками шоколада</a>
                 <div class="hover-product-wrap"><a class="button-preview">Быстрый просмотр</a>
@@ -153,7 +153,7 @@
                 <div class="img-wrap">
                   <img src="img/icecream-strawberry.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">355₽<span>/кг</span></span>
+                <p class="card-price">355₽<span>/кг</span>
                 </p>
                 <a class="card-name" href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
                 <div class="hover-product-wrap"><a class="button-preview">Быстрый просмотр</a>
@@ -163,7 +163,7 @@
                 <div class="img-wrap">
                   <img src="img/icecream-creme-brulee.jpg" width="267" height="267" alt="фото мороженки">
                 </div>
-                <p class="card-price">415₽<span>/кг</span></span>
+                <p class="card-price">415₽<span>/кг</span>
                 </p>
                 <a class="card-name" href="#">Сливочное крем-брюле с карамельной подливкой</a>
                 <div class="hover-product-wrap"><a class="button-preview">Быстрый просмотр</a>
