--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
         <ul class="user-navigation">
           <li>
             <div class="search-dropdown">
-              <a class="user-navigation-item button-search" href="http://search.html"></a>
+              <a class="user-navigation-item button-search" href="http://search.html">Поиск</a>
               <div class="dropdown-wrapper">
                 <form class="search-form" method="get" action="http://search.html">
                   <input type="text" class="search-input" placeholder="Что ищем?">
@@ -320,13 +320,13 @@
         </div>
       </section>
       <div class="paginator">
-        <a class="previous-page disabled"></a>
+        <a class="previous-page disabled">Предыдущая</a>
         <a class="page page-1 current-page">1</a>
         <a class="page page-2" href="#">2</a>
         <a class="page page-3" href="#">3</a>
         <a class="page page-4" href="#">4</a>
         <a class="page page-5" href="#">5</a>
-        <a class="next-page" href="#"></a>
+        <a class="next-page" href="#">Следующая</a>
       </div>
     </section>
   </main>
@@ -335,16 +335,16 @@
     <footer class="main-footer">
       <div class="footer-social">
         <div>
-          <a class="social-button twitter" href="#"></a>
+          <a class="social-button twitter" href="#">Твиттер</a>
         </div>
         <div>
-          <a class="social-button instagram" href="#"></a>
+          <a class="social-button instagram" href="#">Инстаграм</a>
         </div>
         <div>
-          <a class="social-button fb" href="#"></a>
+          <a class="social-button fb" href="#">Фейсбук</a>
         </div>
         <div>
-          <a class="social-button vk" href="#"></a>
+          <a class="social-button vk" href="#">Вконтакте</a>
         </div>
       </div>
       <div class="footer-info">
