--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <ul class="user-navigation">
             <li>
               <div class="search-dropdown">
-                <a class="user-navigation-item button-search" href="http://search.html"></a>
+                <a class="user-navigation-item button-search" href="http://search.html">Поиск</a>
                 <div class="dropdown-wrapper">
                   <form class="search-form" method="get" action="http://search.html">
                     <input type="text" class="search-input" placeholder="Что ищем?">
@@ -216,16 +216,16 @@
         <footer class="main-footer">
           <div class="footer-social">
             <div>
-              <a class="social-button twitter" href="#"></a>
+              <a class="social-button twitter" href="#">Твиттер</a>
             </div>
             <div>
-              <a class="social-button instagram" href="#"></a>
+              <a class="social-button instagram" href="#">Инстаграм</a>
             </div>
             <div>
-              <a class="social-button fb" href="#"></a>
+              <a class="social-button fb" href="#">Фейсбук</a>
             </div>
             <div>
-              <a class="social-button vk" href="#"></a>
+              <a class="social-button vk" href="#">Вконтакте</a>
             </div>
           </div>
           <div class="footer-info">
