checkboxes panel beautification margin madness

--- a/catalog.html
+++ b/catalog.html
@@ -149,7 +149,7 @@
             </select></div>
           </fieldset>
           <fieldset class="filter-form-item">
-            <legend class="filter-form-title">Цена: 100 руб. - 500 руб.</legend>
+            <legend class="filter-form-title">Цена: 100 руб. – 500 руб</legend>
             <div class="filter-control-wrapper">
               <div class="range-filter">
                 <div class="range-controls">
@@ -177,12 +177,12 @@
                 <span class="checkmark"></span>
               </label>
                 <label class="filter-form-radio">до 30%
-                  <input type="radio" name="fat" value="0">
+                  <input type="radio" name="fat" value="0" disabled>
                   <span class="filter-form-radio-icon"></span>
                   <span class="checkmark"></span>
                 </label>
                 <label class="filter-form-radio">выше 30%
-                <input type="radio" name="fat" value="0">
+                <input type="radio" name="fat" value="0" disabled>
                 <span class="filter-form-radio-icon"></span>
                 <span class="checkmark"></span>
               </label>
@@ -211,7 +211,7 @@
               </label>
 
               <label class="filter-checkbox-control">
-                <input type="checkbox" name="filler-syrup">
+                <input type="checkbox" name="filler-syrup" disabled>
                 <span class="filter-form-checkbox-label">сиропы</span>
               </label>
 
@@ -272,7 +272,7 @@
             <img src="img/icecream-blueberries.jpg" width="267" height="267" alt="фото мороженки">
             <p class="card-price">410₽<span>/кг</span>
             </p>
-            <a class="card-name">Сливочно-черничное с цельным ягодами черники</a>
+            <a class="card-name">Сливочно-черничное с цельными ягодами черники</a>
             <div class="hover-product-wrap"><a class="button-preview" href="#">Быстрый просмотр</a></div>
           </div>
           <div class="icecream-card">
