--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
           </section>
           <section class="advantages">
             <h2 class="visually-hidden">Преимущества</h2>
-            <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
-            </p>
+            <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
             <ul class="excellence">
               <li class="about-us-ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
               <li class="about-us-cows">Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
@@ -185,7 +184,7 @@
           <div class="blog-newsletter">
             <section class="blog">
               <div class="blog-header">Новое в нашем блоге</div>
-              <a href="blog.html">10 способов сервировки фруктовых шербетов к столу </a>
+              <a href="blog.html">10 способов сервировки фруктовых щербетов к столу </a>
             </section>
             <section class="newsletter">
               <form class="mail-form" method="get" action="http://search.html">
