--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <p class="address-small">Адрес главного офиса и офлайн магазина</p>
               <p class="address-big">ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
               <p class="address-small">Для заказов по телефону:</p>
-              <p class="address-big">8 812 450-25-25</p>
+              <p class="address-big" x-ms-format-detection="none">8 812 450-25-25</p>
               <p class="address-small">(с 10 до 20 ежедневно)</p>
               <a class="open-feedback-form" href="form.html">Форма обратной связи</a>
             </div>
