--- a/catalog.html
+++ b/catalog.html
@@ -166,26 +166,26 @@
             <legend class="filter-form-title">Жирность:</legend>
             <div class="filter-control-wrapper">
               <div class="filter-form-fat">
-                <label class="filter-form-radio">0%
+                <label class="filter-form-radio">
                   <input type="radio" name="fat" value="0" checked>
-                  <span class="filter-form-radio-icon"></span>                
+                  <span class="filter-form-radio-icon">0%</span>                
                   <span class="checkmark"></span>
               </label>
-                <label class="filter-form-radio">до 10%
+                <label class="filter-form-radio">
                 <input type="radio" name="fat" value="0">
-                <span class="filter-form-radio-icon"></span>
+                <span class="filter-form-radio-icon">до 10%</span>
                 <span class="checkmark"></span>
               </label>
-                <label class="filter-form-radio">до 30%
+                <label class="filter-form-radio">
                   <input type="radio" name="fat" value="0" disabled>
-                  <span class="filter-form-radio-icon"></span>
+                  <span class="filter-form-radio-icon">до 30%</span>
                   <span class="checkmark"></span>
                 </label>
-                <label class="filter-form-radio">выше 30%
-                <input type="radio" name="fat" value="0" disabled>
-                <span class="filter-form-radio-icon"></span>
-                <span class="checkmark"></span>
-              </label>
+                <label class="filter-form-radio">
+                  <input type="radio" name="fat" value="0" disabled>
+                  <span class="filter-form-radio-icon">выше 30%</span>
+                  <span class="checkmark"></span>
+                </label>
               </div>
             </div>
           </fieldset>
@@ -326,6 +326,7 @@
         <a class="page page-3" href="#">3</a>
         <a class="page page-4" href="#">4</a>
         <a class="page page-5" href="#">5</a>
+
         <a class="next-page" href="#">Следующая</a>
       </div>
     </section>
